<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">GoodFoodApp</string>
    <string name="sign_up_title">Sign Up!</string>
    <string name="sign_up_msg">Create your account</string>
    <string name="email_txt">Email</string>
    <string name="name_txt">Name</string>
    <string name="password_txt">Password</string>
    <string name="repeat_password_txt">Repeat Password</string>
    <string name="btn_sign_up_txt">Sign Up</string>
    <string name="switch_to_login_msg">Already have an account? Login</string>
    <string name="logo_description">logo</string>
    <string name="login_txt_msg">Login</string>
    <string name="dont_have_account_msg">Don’t have an account? Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="your_email">Your Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="edit_name">Edit Name</string>
    <string name="my_recipes">My Recipes</string>
    <string name="search">Search</string>
    <string name="add_post">Add Recipe</string>
    <string name="log_out">Log Out</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="share">SHARE</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="create_post">Create Recipe</string>
    <string name="edit_post">Edit Recipe</string>
    <string name="user_picture_description">User Picture</string>
    <string name="content_view_post">Content</string>
    <string name="post_publish_date">Publish Date</string>
    <string name="publish_date_title">Publish Date:</string>
    <string name="view_post_title">Title</string>
    <string name="view_post_username">User Name</string>
    <string name="no_recipes_message" tools:ignore="MissingTranslation">You don\'t have recipes yet, click here to create a new recipe!</string>
</resources>