<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_my_recipes"
        android:enabled="true"
        android:icon="@drawable/ic_grid"
        android:title="@string/my_recipes" />
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_new_post"
        android:enabled="true"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_post" />
    <item
        android:id="@+id/nav_my_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />
</menu>